tests/e2e/not_allowed/null.error
Error: syntax error in story at line 1, column 6

1|    null = 1
           ^

E0041: `=` is not allowed here
